@@ -97,7 +97,8 @@ Extensions
 Other Changes
 =============
 
-* Fix false negative ``consider-iterating-dictionary`` during membership checks
+* Fix false negative for ``consider-iterating-dictionary`` during membership checks encapsulated in iterables
+  or ``not in`` checks
 
   Closes #5323
 
